Attempt #1 to fix editor scaling on mobile

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -9,7 +9,7 @@
         @apply scrollbar scrollbar-thin scrollbar-thumb-gray-400 scrollbar-track-gray-600 scrollbar-thumb-rounded-full scrollbar-track-rounded-full;
     }
     .ace_gutter, .ace_content, .ace_line {
-        @apply pt-2;
+        @apply pt-0;
     }
 
 }
